修改部分在 IDEA 中报 Warning 的代码块；拆分过长的参数列表增加可读性。